--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  /* font-size: 62.5%; */
+@layer utilities {
+  .text-shadow {
+    text-shadow: 4px 3px 0 #fff;
+  }
 }
